--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,11 @@
 #root {
+  min-height: 100vh;
+}
+
+/** App.css 
+#root {
   max-width: 1280px;
   margin: 0 auto;
-  /* padding: 2rem; */
   text-align: center;
 }
 
@@ -40,3 +44,5 @@
 .read-the-docs {
   color: #888;
 }
+
+**/
